AccceptRejecetLeave/src/main/java/com/example/manager/accept/reject/AccceptRejecetLeaveApplication.java
package com.example.manager.accept.reject;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class AccceptRejecetLeaveApplication {

	public static void main(String[] args) {
		SpringApplication.run(AccceptRejecetLeaveApplication.class, args);
		System.out.println("Accept Reject microservice");
	}

}
